# learning-open-source

./: .env.example  .gitignore  AI-AGENT-SKILLS.md  CLAUDE.md  Clawith 学习教程.md  DEVLOG.md  LESSON.md  QUICK_START.md  README.md  SKILLS_INDEX.md  SKILLS_STRUCTURE.md  filtered_skills.json  pyproject.toml  skills-catalog.md  skills-index.json
.github/workflows/: ci.yml
.trae/skills/devlog/: SKILL.md
.trae/skills/devlog/references/: categories.md  git-exclude-explained.md  shared-mode.md
.trae/skills/devlog/scripts/: setup.ps1  setup.sh  verify-ignored.ps1  verify-ignored.sh
.trae/skills/superpowers-openspec-pipeline/: SKILL.md
.workbuddy/memory/: 2026-04-09.md  2026-04-12.md  2026-05-04.md
agents/: code-reviewer.md
hooks/: README.md  skill-validate.sh
knowledge/: 驾驭工程_完整版.md
scripts/: add_selected_skills.py  build_skills_index.py  check_index.py  debug_pdf_structure.py  parse_pdf_skills.py  scan_github_skills.py  skill_finder.py  skills-index.json  skills_collector.py  skills_dashboard.py  state_manager.py  update-index.js  update_index.py
superpowers-openspec-manual/: superpowers-openspec-manual.html
tests/: test_skills_index.py
tests/test_helper/: common-setup.bash
tests/unit/: hooks.bats
web/: app.py
web/static/css/: style.css
web/templates/: index.html
workflows/: auto-workflow-engine.md  smart-completion-engine.md
